# Keystone-Examples

./: README.md
addition/: CMakeLists.txt  README.md
addition/eapp/: addition.c
addition/host/: addition_host.cpp
communication_enclaves/: CMakeLists.txt  README.md
communication_enclaves/eapp_produit/: produit.c
communication_enclaves/eapp_somme/: somme.c
communication_enclaves/host/: host_communication_enclave.cpp
password/: CMakeLists.txt  README.md
password/eapp/: password.c
password/host/: password_host.cpp
sep-enclaves/: CMakeLists.txt  README.md
sep-enclaves/eapp_multiplier/: multiplier.c
sep-enclaves/eapp_password_check/: password_check.c
sep-enclaves/host/: multi_enclave_host.cpp
